--- a/doc/source/tune/examples/bohb_example.ipynb
+++ b/doc/source/tune/examples/bohb_example.ipynb
@@ -325,7 +325,7 @@
     "Finally, we run the experiment to `min`imize the \"mean_loss\" of the `objective`\n",
     "by searching within `\"steps\": 100` via `algo`, `num_samples` times. This previous\n",
     "sentence is fully characterizes the search problem we aim to solve.\n",
-    "With this in mind, notice how efficient it is to execute `tune.run()`."
+    "With this in mind, notice how efficient it is to execute `tuner.fit()`."
    ]
   },
   {
@@ -1093,7 +1093,7 @@
    "source": [
     "# As we are passing config space directly to the searcher,\n",
     "# we need to define metric and mode in it as well, in addition\n",
-    "# to tune.run.\n",
+    "# to Tuner()\n",
     "algo = TuneBOHB(\n",
     "    space=config_space,\n",
     "    metric=\"mean_loss\",\n",
