--- a/doc/source/tune/examples/dragonfly_example.ipynb
+++ b/doc/source/tune/examples/dragonfly_example.ipynb
@@ -75,7 +75,7 @@
     "import time\n",
     "\n",
     "import ray\n",
-    "from ray import air, tune\n",
+    "from ray import tune\n",
     "from ray.air import session\n",
     "from ray.tune.search import ConcurrencyLimiter\n",
     "from ray.tune.search.dragonfly import DragonflySearch"
@@ -229,7 +229,7 @@
     "Finally, we run the experiment to `min`imize the `mean_loss` of the `objective` by\n",
     "searching `search_config` via `algo`, `num_samples` times. This previous sentence is\n",
     "fully characterizes the search problem we aim to solve. With this in mind,\n",
-    "notice how efficient it is to execute `tune.run()`."
+    "notice how efficient it is to execute `tuner.fit()`."
    ]
   },
   {
@@ -246,9 +246,6 @@
     "        mode=\"max\",\n",
     "        search_alg=algo,\n",
     "        num_samples=num_samples,\n",
-    "    ),\n",
-    "    run_config=air.RunConfig(\n",
-    "        name=\"dragonfly_search\",\n",
     "    ),\n",
     "    param_space=search_space,\n",
     ")\n",
