--- a/doc/source/tune/examples/flaml_example.ipynb
+++ b/doc/source/tune/examples/flaml_example.ipynb
@@ -71,7 +71,7 @@
     "import time\n",
     "\n",
     "import ray\n",
-    "from ray import air, tune\n",
+    "from ray import tune\n",
     "from ray.air import session\n",
     "from ray.tune.search import ConcurrencyLimiter\n",
     "from ray.tune.search.flaml import BlendSearch, CFO"
@@ -285,7 +285,7 @@
     "Finally, we run the experiment to `\"min\"`imize the \"mean_loss\" of the `objective` by\n",
     "searching `search_config` via `algo`, `num_samples` times. This previous sentence is\n",
     "fully characterizes the search problem we aim to solve. With this in mind, observe\n",
-    "how efficient it is to execute `tune.run()`."
+    "how efficient it is to execute `tuner.fit()`."
    ]
   },
   {
@@ -1160,15 +1160,17 @@
     }
    ],
    "source": [
-    "analysis = tune.run(\n",
+    "tuner = tune.Tuner(\n",
     "    objective,\n",
-    "    search_alg=algo,\n",
-    "    metric=\"mean_loss\",\n",
-    "    mode=\"min\",\n",
-    "    name=\"blendsearch_exp\",\n",
-    "    num_samples=num_samples,\n",
-    "    config=search_config,\n",
-    ")"
+    "    tune_config=tune.TuneConfig(\n",
+    "        metric=\"mean_loss\",\n",
+    "        mode=\"min\",\n",
+    "        search_alg=algo,\n",
+    "        num_samples=num_samples,\n",
+    "    ),\n",
+    "    param_space=search_config,\n",
+    ")\n",
+    "results = tuner.fit()"
    ]
   },
   {
@@ -1194,7 +1196,7 @@
     }
    ],
    "source": [
-    "print(\"Best hyperparameters found were: \", analysis.best_config)"
+    "print(\"Best hyperparameters found were: \", results.get_best_result().config)"
    ]
   },
   {
@@ -1223,7 +1225,7 @@
    "metadata": {},
    "source": [
     "Similarly we define a search space, but this time we feed it as an argument to\n",
-    "`BlendSearch` rather than `tune.run`'s `config` argument.\n",
+    "`BlendSearch` rather than `Tuner()`'s `param_space` argument.\n",
     "\n",
     "We next define the time budget via `set_search_properties`.\n",
     "And once again include the `ConcurrencyLimiter`."
@@ -1995,9 +1997,6 @@
     "        num_samples=-1,\n",
     "        time_budget_s=time_budget_s,\n",
     "    ),\n",
-    "    run_config=air.RunConfig(\n",
-    "        name=\"blendsearch_exp\",\n",
-    "    ),\n",
     "    param_space={\"steps\": 100},\n",
     ")\n",
     "results = tuner.fit()"
@@ -2115,7 +2114,7 @@
     "Finally, we run the experiment to `\"min\"`imize the \"mean_loss\" of the `objective`\n",
     "by searching `search_config` via `algo`, `num_samples` times. This previous sentence\n",
     "is fully characterizes the search problem we aim to solve. With this in mind,\n",
-    "notice how efficient it is to execute `tune.run()`."
+    "notice how efficient it is to execute `tuner.fit()`."
    ]
   },
   {
@@ -2989,9 +2988,6 @@
     "        mode=\"min\",\n",
     "        search_alg=algo,\n",
     "        num_samples=num_samples,\n",
-    "    ),\n",
-    "    run_config=air.RunConfig(\n",
-    "        name=\"cfo_exp\",\n",
     "    ),\n",
     "    param_space=search_config,\n",
     ")\n",
