--- a/doc/source/tune/examples/hyperopt_example.ipynb
+++ b/doc/source/tune/examples/hyperopt_example.ipynb
@@ -334,7 +334,7 @@
    "id": "1b94c93b",
    "metadata": {},
    "source": [
-    "Finally, we run the experiment to `\"min\"`imize the \"mean_loss\" of the `objective` by searching `search_config` via `algo`, `num_samples` times. This previous sentence is fully characterizes the search problem we aim to solve. With this in mind, notice how efficient it is to execute `tune.run()`."
+    "Finally, we run the experiment to `\"min\"`imize the \"mean_loss\" of the `objective` by searching `search_config` via `algo`, `num_samples` times. This previous sentence is fully characterizes the search problem we aim to solve. With this in mind, notice how efficient it is to execute `tuner.fit()`."
    ]
   },
   {
