--- a/doc/source/tune/examples/nevergrad_example.ipynb
+++ b/doc/source/tune/examples/nevergrad_example.ipynb
@@ -306,7 +306,7 @@
    "id": "0b9d051f",
    "metadata": {},
    "source": [
-    "Finally, we run the experiment to `\"min\"`imize the \"mean_loss\" of the `objective` by searching `search_space` via `algo`, `num_samples` times. This previous sentence is fully characterizes the search problem we aim to solve. With this in mind, observe how efficient it is to execute `tune.run()`."
+    "Finally, we run the experiment to `\"min\"`imize the \"mean_loss\" of the `objective` by searching `search_space` via `algo`, `num_samples` times. This previous sentence is fully characterizes the search problem we aim to solve. With this in mind, observe how efficient it is to execute `tuner.fit()`."
    ]
   },
   {
