--- a/doc/source/tune/examples/optuna_example.ipynb
+++ b/doc/source/tune/examples/optuna_example.ipynb
@@ -2222,7 +2222,7 @@
     "    \"\"\"Define-by-run function to create the search space.\n",
     "\n",
     "    Ensure no actual computation takes place here. That should go into\n",
-    "    the trainable passed to ``tune.run`` (in this example, that's\n",
+    "    the trainable passed to ``Tuner()`` (in this example, that's\n",
     "    ``objective``).\n",
     "\n",
     "    For more information, see https://optuna.readthedocs.io/en/stable\\\n",
