--- a/doc/source/tune/examples/pbt_transformers.ipynb
+++ b/doc/source/tune/examples/pbt_transformers.ipynb
@@ -38,7 +38,7 @@
     "import os\n",
     "\n",
     "import ray\n",
-    "from ray import air, tune\n",
+    "from ray import tune\n",
     "from ray.tune import CLIReporter\n",
     "from ray.tune.examples.pbt_transformers.utils import (\n",
     "    download_data,\n",
