--- a/doc/source/tune/examples/sigopt_example.ipynb
+++ b/doc/source/tune/examples/sigopt_example.ipynb
@@ -232,7 +232,7 @@
    "id": "13743e20",
    "metadata": {},
    "source": [
-    "Finally, we run the experiment to `\"min\"`imize the \"mean_loss\" of the `objective` by searching `space` provided above to `algo`, `num_samples` times. This previous sentence is fully characterizes the search problem we aim to solve. With this in mind, notice how efficient it is to execute `tune.run()`."
+    "Finally, we run the experiment to `\"min\"`imize the \"mean_loss\" of the `objective` by searching `space` provided above to `algo`, `num_samples` times. This previous sentence is fully characterizes the search problem we aim to solve. With this in mind, notice how efficient it is to execute `tuner.fit()`."
    ]
   },
   {
