--- a/doc/source/tune/examples/tune-comet.ipynb
+++ b/doc/source/tune/examples/tune-comet.ipynb
@@ -93,7 +93,7 @@
    "id": "d792a1b0",
    "metadata": {},
    "source": [
-    "You can add a Comet logger by specifying the `callbacks` argument in your `tune.run` accordingly:"
+    "You can add a Comet logger by specifying the `callbacks` argument in your `RunConfig()` accordingly:"
    ]
   },
   {
