--- a/doc/source/tune/examples/tune-wandb.ipynb
+++ b/doc/source/tune/examples/tune-wandb.ipynb
@@ -254,7 +254,7 @@
    "source": [
     "Running Tune with this `WandbTrainable` works exactly the same as with the function API.\n",
     "The below `tune_trainable` function differs from `tune_decorated` above only in the first argument we pass to\n",
-    "`tune.run()`:"
+    "`Tuner()`:"
    ]
   },
   {
