--- a/doc/source/tune/examples/hebo_example.ipynb
+++ b/doc/source/tune/examples/hebo_example.ipynb
@@ -368,7 +368,7 @@
    "id": "3e38301f",
    "metadata": {},
    "source": [
-    "Finally, we run the experiment to `\"min\"`imize the \"mean_loss\" of the `objective` by searching `search_config` via `algo`, `num_samples` times. This previous sentence is fully characterizes the search problem we aim to solve. With this in mind, notice how efficient it is to execute `tune.run()`."
+    "Finally, we run the experiment to `\"min\"`imize the \"mean_loss\" of the `objective` by searching `search_config` via `algo`, `num_samples` times. This previous sentence is fully characterizes the search problem we aim to solve. With this in mind, notice how efficient it is to execute `tuner.fit()`."
    ]
   },
   {
