--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -49,6 +49,7 @@
     "We will need access to a Kubernetes cluster. There are two options here:\n",
     "1. Configure access to a remote Kubernetes cluster\n",
     "**OR**\n",
+    "\n",
     "2. Run the examples locally by [installing kind](https://kind.sigs.k8s.io/docs/user/quick-start/#installation). Start your [kind](https://kind.sigs.k8s.io/) cluster by running"
    ]
   },
@@ -67,8 +68,8 @@
    "id": "278726e0",
    "metadata": {},
    "source": [
-    "To run the example in this guide, make sure your Kubernetes cluster can accomodate\n",
-    "additional resource requests of 4 CPU and 2.5Gi memory. \n",
+    "To run the example in this guide, make sure your Kubernetes cluster (or local Kind cluster) can accomodate\n",
+    "additional resource requests of 3 CPU and 2Gi memory. \n",
     "\n",
     "## Deploying the KubeRay operator\n",
     "\n",
@@ -133,13 +134,15 @@
    "id": "dac860db",
    "metadata": {},
    "source": [
-    "Once the KubeRay operator is running, we are ready to deploy a Ray cluster by deploying a RayCluster Custom Resource:"
+    "Once the KubeRay operator is running, we are ready to deploy a Ray cluster by deploying a RayCluster Custom Resource.\n",
+    "\n",
+    "(In the rest of this guide, we will deploy resources into the default namespace. To use a non-default namespace, use `kubectl -n <your-namespace> ...`.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e69c551e",
+   "id": "24535e6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,18 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2538c4fd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "raycluster-autoscaler-head-plqwd\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! kubectl get pods --selector=ray.io/cluster=raycluster-autoscaler --selector=ray.io/node-type=head\\\n",
     " -o custom-columns=POD:metadata.name --no-headers\n",
@@ -235,18 +230,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c35b2454",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Substitute your output from the last cell in place of \"raycluster-autoscaler-head-xxxxx\"\n",
     "! kubectl exec raycluster-autoscaler-head-wpcth -it -c ray-head -- python -c\\\n",
@@ -265,21 +252,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "37842ea9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME                                             READY   STATUS            RESTARTS   AGE\r\n",
-      "raycluster-autoscaler-head-plqwd                 2/2     Running           0          5m58s\r\n",
-      "raycluster-autoscaler-worker-small-group-7kvxw   1/1     Running           0          5m58s\r\n",
-      "raycluster-autoscaler-worker-small-group-dtbkh   0/1     PodInitializing   0          1s\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! kubectl get pod --selector=ray.io/cluster=raycluster-autoscaler\n",
     "# NAME                                             READY   STATUS    RESTARTS   AGE\n",
@@ -298,38 +274,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6fa373aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "======== Autoscaler status: 2022-07-21 21:22:25.355156 ========\r\n",
-      "Node status\r\n",
-      "---------------------------------------------------------------\r\n",
-      "Healthy:\r\n",
-      " 1 head-group\r\n",
-      " 2 small-group\r\n",
-      "Pending:\r\n",
-      " (no pending nodes)\r\n",
-      "Recent failures:\r\n",
-      " (no failures)\r\n",
-      "\r\n",
-      "Resources\r\n",
-      "---------------------------------------------------------------\r\n",
-      "Usage:\r\n",
-      " 0.0/3.0 CPU\r\n",
-      " 0.00/1.931 GiB memory\r\n",
-      " 0.00/0.446 GiB object_store_memory\r\n",
-      "\r\n",
-      "Demands:\r\n",
-      " {'CPU': 1}: 3+ from request_resources()\r\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! kubectl exec raycluster-autoscaler-head-xxxxx -it -c ray-head -- ray status\n",
     "# ======== Autoscaler status: 2022-07-21 xxxxxxxxxx ========\n",
@@ -346,37 +294,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4ec93304",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "======== Autoscaler status: 2022-07-21 21:23:15.315731 ========\r\n",
-      "Node status\r\n",
-      "---------------------------------------------------------------\r\n",
-      "Healthy:\r\n",
-      " 1 head-group\r\n",
-      " 2 small-group\r\n",
-      "Pending:\r\n",
-      " (no pending nodes)\r\n",
-      "Recent failures:\r\n",
-      " (no failures)\r\n",
-      "\r\n",
-      "Resources\r\n",
-      "---------------------------------------------------------------\r\n",
-      "Usage:\r\n",
-      " 0.0/3.0 CPU\r\n",
-      " 0.00/1.931 GiB memory\r\n",
-      " 0.00/0.446 GiB object_store_memory\r\n",
-      "\r\n",
-      "Demands:\r\n",
-      " {'CPU': 1}: 3+ from request_resources()\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This command gets the last 20 lines of autoscaler logs.\n",
     "! kubectl logs raycluster-autoscaler-head-xxxxx -c autoscaler | tail -n 20\n",
@@ -417,7 +338,7 @@
    "id": "e29c48ba",
    "metadata": {},
    "source": [
-    "### Using Ray Job submission"
+    "### Ray Job submission"
    ]
   },
   {
@@ -452,39 +373,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "9f5dd4d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[37mJob submission server address\u001b[39m: \u001b[1mhttp://localhost:8265\u001b[22m\n",
-      "\n",
-      "\u001b[32m-------------------------------------------------------\u001b[39m\n",
-      "\u001b[32mJob 'raysubmit_kyET4V7HNZ4etBTu' submitted successfully\u001b[39m\n",
-      "\u001b[32m-------------------------------------------------------\u001b[39m\n",
-      "\n",
-      "\u001b[36mNext steps\u001b[39m\n",
-      "  Query the logs of the job:\n",
-      "    \u001b[1mray job logs raysubmit_kyET4V7HNZ4etBTu\u001b[22m\n",
-      "  Query the status of the job:\n",
-      "    \u001b[1mray job status raysubmit_kyET4V7HNZ4etBTu\u001b[22m\n",
-      "  Request the job to be stopped:\n",
-      "    \u001b[1mray job stop raysubmit_kyET4V7HNZ4etBTu\u001b[22m\n",
-      "\n",
-      "Tailing logs until the job exits (disable with --no-wait):\n",
-      "{'CPU': 3.0, 'node:10.244.0.22': 1.0, 'object_store_memory': 482709502.0, 'memory': 2073741824.0, 'node:10.244.0.20': 1.0, 'node:10.244.0.21': 1.0}\n",
-      "\n",
-      "\u001b[32m------------------------------------------\u001b[39m\n",
-      "\u001b[32mJob 'raysubmit_kyET4V7HNZ4etBTu' succeeded\u001b[39m\n",
-      "\u001b[32m------------------------------------------\u001b[39m\n",
-      "\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Install Ray locally to use the Ray Job CLI\n",
     "# The following job's logs will show the Ray cluster's total resource capacity, including 3 CPUs.\n",
@@ -533,26 +425,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6e5a5e0f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-07-21 21:38:29,779\tINFO client_builder.py:247 -- Passing the following kwargs to ray.init() on the server: logging_format\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The local host name is Dmitris-MBP.local.meter\n",
-      "The Ray head pod's name is raycluster-autoscaler-head-wpcth\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ray\n",
     "import platform\n",
@@ -565,6 +441,8 @@
     "# The network name of the local machine.\n",
     "local_host_name = platform.node()\n",
     "\n",
+    "# This is a Ray task.\n",
+    "# The task will returns the name of the Ray pod that executes it.\n",
     "@ray.remote\n",
     "def get_host_name():\n",
     "    return platform.node()\n",
@@ -604,7 +482,7 @@
    "id": "d7aa0221",
    "metadata": {},
    "source": [
-    "OR"
+    "**OR**"
    ]
   },
   {
@@ -674,9 +552,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4e1db4f4",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c36b913",
    "metadata": {},
+   "outputs": [],
    "source": [
     "! kind delete cluster"
    ]
