--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24535e6f",
+   "id": "0575f01c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,13 +368,18 @@
    "id": "ec66649c",
    "metadata": {},
    "source": [
-    "Now that we have forwarded the dashboard port to a local port, we can submit a Ray program for execution on the head node."
+    "Note: We use port-forwarding in this guide as a simple way to experiment with a Ray cluster's services. For production use-cases, you would typically either \n",
+    "- Access the service from within the Kubernetes cluster or\n",
+    "- Use an ingress controller to expose the service outside the cluster.\n",
+    "See the :ref:networking notes for details.\n",
+    "\n",
+    "Now that we have access to the Dashboard port, we can submit jobs to the Ray Cluster:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f5dd4d0",
+   "id": "9373356a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e5a5e0f",
+   "id": "e742aab7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c36b913",
+   "id": "a19b0284",
    "metadata": {},
    "outputs": [],
    "source": [
