fix notebook tests.

--- a/doc/source/tune/examples/mxnet_example.ipynb
+++ b/doc/source/tune/examples/mxnet_example.ipynb
@@ -102,7 +102,7 @@
     "            scheduler=scheduler,\n",
     "            num_samples=num_samples,\n",
     "        ),\n",
-    "        param_space=search_space,\n",
+    "        param_space=config,\n",
     "    )\n",
     "    results = tuner.fit()\n",
     "    return results\n",
