--- a/doc/source/tune/examples/tune-pytorch-lightning.ipynb
+++ b/doc/source/tune/examples/tune-pytorch-lightning.ipynb
@@ -59,11 +59,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "e6e77570",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
@@ -96,11 +92,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "48b20f48",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class LightningMNISTClassifier(pl.LightningModule):\n",
@@ -217,11 +209,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "86df3d39",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def train_mnist_no_tune():\n",
@@ -255,11 +243,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "34faeb3b",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pytorch_lightning.loggers import TensorBoardLogger\n",
@@ -291,11 +275,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "4bab80bc",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -344,11 +324,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "74e7d1c2",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def train_mnist_tune(config, num_epochs=10, num_gpus=0, data_dir=\"~/data\"):\n",
@@ -390,11 +366,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "a50645e9",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "config = {\n",
@@ -422,11 +394,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "a2596b01",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "num_epochs = 10\n",
@@ -453,11 +421,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "cd605a16",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "reporter = CLIReporter(\n",
@@ -481,11 +445,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "332668dc",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gpus_per_trial = 0\n",
@@ -517,11 +477,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "dc402716",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "resources_per_trial = {\"cpu\": 1, \"gpu\": gpus_per_trial}"
@@ -556,11 +512,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "ea182330",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def tune_mnist_asha(num_samples=10, num_epochs=10, gpus_per_trial=0, data_dir=\"~/data\"):\n",
@@ -663,11 +615,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "7f86e4d8",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -705,11 +653,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "746e962a",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def train_mnist_tune_checkpoint(config,\n",
@@ -760,11 +704,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "e12a1bd5",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def tune_mnist_pbt(num_samples=10, num_epochs=10, gpus_per_trial=0, data_dir=\"~/data\"):\n",
@@ -806,7 +746,7 @@
     "        ),\n",
     "        run_config=air.RunConfig(\n",
     "            name=\"tune_mnist_asha\",\n",
-    "            tune_mnist_pbt=reporter,\n",
+    "            progress_reporter=reporter,\n",
     "        ),\n",
     "        param_space=config,\n",
     "    )\n",
@@ -837,9 +777,6 @@
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    },
-    "vscode": {
-     "languageId": "python"
     }
    },
    "outputs": [
