Fix TensorDtype construction from string and fix example.

--- a/doc/source/ray-air/examples/torch_incremental_learning.ipynb
+++ b/doc/source/ray-air/examples/torch_incremental_learning.ipynb
@@ -512,18 +512,18 @@
    "outputs": [],
    "source": [
     "from ray.data.preprocessors import BatchMapper\n",
-    "from ray.data.extensions import TensorArray\n",
     "\n",
     "from torchvision import transforms\n",
     "\n",
     "def preprocess_images(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Preprocess images by scaling each channel in the image.\"\"\"\n",
     "\n",
+    "    df[\"image\"] = np.asarray(df[\"image\"])\n",
     "    torchvision_transforms = transforms.Compose(\n",
     "      [transforms.ToTensor(), transforms.Normalize((0.1307,), (0.3081,))]\n",
     "    )\n",
     "\n",
-    "    df[\"image\"] = TensorArray([torchvision_transforms(image) for image in df[\"image\"]])\n",
+    "    df[\"image\"] = np.array([torchvision_transforms(image) for image in df[\"image\"]])\n",
     "    return df\n",
     "\n",
     "mnist_normalize_preprocessor = BatchMapper(fn=preprocess_images)"
