--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -5,16 +5,16 @@
    "id": "f34f1b75",
    "metadata": {},
    "source": [
-    "# Quickstart\n",
+    "# Getting Started\n",
     "\n",
-    "In this guide, we discuss how to deploy and interact with a Ray cluster on Kubernetes.\n",
+    "In this guide, we discuss how to manage and interact with Ray clusters on Kubernetes.\n",
     "\n",
     "This guide is available at the Ray GitHub repo as an [executable Jupyter notebook](https://github.com/ray-project/ray/blob/master/doc/source/cluster/kuberay/quickstart.ipynb).\n",
     "\n",
     "\n",
     "## Preparation\n",
     "\n",
-    "### Install Ray's latest release"
+    "### Install the latest Ray release"
    ]
   },
   {
@@ -40,17 +40,17 @@
    "id": "c0933e2f",
    "metadata": {},
    "source": [
-    "### Install Kubectl\n",
+    "### Install kubectl\n",
     "\n",
     "We will use kubectl to interact with Kubernetes. Find installation instructions at the [Kubernetes documentation](https://kubernetes.io/docs/tasks/tools/#kubectl).\n",
     "\n",
     "### Access a Kubernetes cluster\n",
     "\n",
-    "We will need access to a Kubernetes cluster. There are two options here:\n",
+    "We will need access to a Kubernetes cluster. There are two options:\n",
     "1. Configure access to a remote Kubernetes cluster\n",
     "**OR**\n",
     "\n",
-    "2. Run the examples locally by [installing kind](https://kind.sigs.k8s.io/docs/user/quick-start/#installation). Start your [kind](https://kind.sigs.k8s.io/) cluster by running"
+    "2. Run the examples locally by [installing kind](https://kind.sigs.k8s.io/docs/user/quick-start/#installation). Start your [kind](https://kind.sigs.k8s.io/) cluster by running the following command:"
    ]
   },
   {
@@ -134,20 +134,21 @@
    "id": "dac860db",
    "metadata": {},
    "source": [
-    "Once the KubeRay operator is running, we are ready to deploy a Ray cluster by deploying a RayCluster Custom Resource.\n",
+    "Once the KubeRay operator is running, we are ready to deploy a Ray cluster. To do so, we create a RayCluster Custom Resource (CR).\n",
     "\n",
-    "(In the rest of this guide, we will deploy resources into the default namespace. To use a non-default namespace, use `kubectl -n <your-namespace> ...`.)"
+    "(In the rest of this guide, we will deploy resources into the default namespace. To use a non-default namespace, specify the namespace in your kubectl commands: `kubectl -n <your-namespace> ...`.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0575f01c",
+   "id": "f08e969e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This Ray cluster is named `raycluster-autoscaler` because it has the optional Ray Autoscaler support enabled.\n",
-    "kubectl apply -f kuberay/ray-operator/samples/ray-cluster.autoscaler.yaml"
+    "# Deploy the Ray Cluster CR:\n",
+    "kubectl apply -f kuberay/ray-operator/samples/ray-cluster.autoscaler.yaml\n",
+    "# This Ray cluster is named `raycluster-autoscaler` because it has the optional Ray Autoscaler support enabled."
    ]
   },
   {
@@ -161,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9a85950",
+   "id": "10929ab2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,12 +172,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b26f236",
+   "metadata": {},
+   "source": [
+    "The KubeRay operator will now detect the RayCluster object. The operator will then start your Ray cluster by creating head and worker pods. To view the pods in the Ray cluster, run the following commands:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "48d938b2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# View the pods in the Ray cluster named \"raycluster-autoscaler\"\n",
     "! kubectl get pods --selector=ray.io/cluster=raycluster-autoscaler\n",
     "# NAME                                             READY   STATUS    RESTARTS   AGE\n",
     "# raycluster-autoscaler-head-xxxxx                 2/2     Running   0          XXs\n",
@@ -379,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9373356a",
+   "id": "c2df8167",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e742aab7",
+   "id": "997f287e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a19b0284",
+   "id": "b52ac71c",
    "metadata": {},
    "outputs": [],
    "source": [
