--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -5,11 +5,12 @@
    "id": "f34f1b75",
    "metadata": {},
    "source": [
+    "(kuberay-quickstart)=\n",
     "# Getting Started\n",
     "\n",
     "In this guide, we discuss how to manage and interact with Ray clusters on Kubernetes.\n",
     "\n",
-    "This guide is available at the Ray GitHub repo as an [executable Jupyter notebook](https://github.com/ray-project/ray/blob/master/doc/source/cluster/kuberay/quickstart.ipynb).\n",
+    "You can download this guide as an executable Jupyter notebook (.ipynb) by clicking the download button on the top right of this page.\n",
     "\n",
     "\n",
     "## Preparation\n",
@@ -88,7 +89,7 @@
     "git clone https://github.com/ray-project/kuberay\n",
     "# This creates the KubeRay operator and all of the resources it needs.\n",
     "kubectl create -k ray-operator/config/default\n",
-    "# Note that we must use \"kubectl create\" in the above command.\"kubectl apply\" will not work due to https://github.com/ray-project/kuberay/issues/271"
+    "# Note that we must use \"kubectl create\" in the above command. \"kubectl apply\" will not work due to https://github.com/ray-project/kuberay/issues/271"
    ]
   },
   {
@@ -142,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f08e969e",
+   "id": "e8892d09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10929ab2",
+   "id": "164f34f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b26f236",
+   "id": "61990453",
    "metadata": {},
    "source": [
     "The KubeRay operator will now detect the RayCluster object. The operator will then start your Ray cluster by creating head and worker pods. To view the pods in the Ray cluster, run the following commands:"
@@ -235,7 +236,7 @@
    "source": [
     "Now, we can run a Ray program on the Ray head pod. The Ray program in the next cell asks the autoscaler to scale the cluster to a total of 3 CPUs. The head and worker in our example cluster each have a capacity of 1 CPU, so the request should trigger upscaling of an additional worker pod.\n",
     "\n",
-    "(Note that in real-life scenarios, we will typically want to use much larger Ray pods. In fact, it is advantageous to size each Ray pod to take up an entire Kubernetes node. See {ref} for more details.)"
+    "(Note that in real-life scenarios, we will typically want to use much larger Ray pods. In fact, it is advantageous to size each Ray pod to take up an entire Kubernetes node. See the {ref}`configuration guide<kuberay-config>` for more details.)"
    ]
   },
   {
@@ -381,7 +382,7 @@
     "Note: We use port-forwarding in this guide as a simple way to experiment with a Ray cluster's services. For production use-cases, you would typically either \n",
     "- Access the service from within the Kubernetes cluster or\n",
     "- Use an ingress controller to expose the service outside the cluster.\n",
-    "See the :ref:networking notes for details.\n",
+    "See the {ref}`networking notes <kuberay-networking>` for details.\n",
     "\n",
     "Now that we have access to the Dashboard port, we can submit jobs to the Ray Cluster:"
    ]
@@ -389,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2df8167",
+   "id": "e81ff82b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +406,7 @@
    "source": [
     "### Viewing the Ray Dashboard\n",
     "\n",
-    "Assuming the port-forwarding process described above is still running, you may view the Ray Dashboard by visiting `localhost:8265`.\n",
+    "Assuming the port-forwarding process described above is still running, you may view the {ref}`ray-dashboard` by visiting `localhost:8265` in you browser.\n",
     "\n",
     "The dashboard port will not be used in the rest of this guide. You may stop the port-forwarding process if you wish.\n",
     "\n",
@@ -441,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "997f287e",
+   "id": "dc080d60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b52ac71c",
+   "id": "f1b698a1",
    "metadata": {},
    "outputs": [],
    "source": [
